--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "refresh": "rm -rf node_modules && rm package-lock.json && npm i"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,10 @@
   "homepage": "https://github.com/zrrrzzt/b5-utils#readme",
   "dependencies": {
     "@alheimsins/b5-50-ipip-neo-pi-r": "3.0.0",
-    "@alheimsins/b5-costa-mccrae-300-ipip-neo-pi-r": "3.2.0",
+    "@alheimsins/b5-costa-mccrae-300-ipip-neo-pi-r": "4.0.0",
     "@alheimsins/b5-johnson-120-ipip-neo-pi-r": "5.2.0"
+  },
+  "devDependencies": {
+    "standard": "14.3.4"
   }
 }
